ヘッダーレスポンシブ、ボイスの編集しました

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
 <body>
 
-  <div id="loading">
+  <!-- <div id="loading"> -->
     <!-- <img src="img/logoovie.gif"> -->
-     <video src="img/loading.mp4" autoplay muted playsinline></video>
-  </div>
+     <!-- <video src="img/loading.mp4" autoplay muted playsinline></video> -->
+  <!-- </div> -->
 
   <header>
     <h1>
@@ -93,6 +93,7 @@
         </p>
       </div>
 
+      <div class="right">
       <ul class="menu">
         <li>
           <a href="index.html">
@@ -151,6 +152,7 @@
         </li>
         <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
       </ul>
+      </div>
     </nav>
 
     <nav class="header-menu">
