--- a/voice.html
+++ b/voice.html
@@ -96,143 +96,145 @@
   </head>
 
   <body class="voice">
-    <header>
-      <h1>
-        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
-      </h1>
-  
-      <div class="menu-bg"></div>
-      <nav class="hamburger-menu">
-        <div class="company">
-          <h2 class="active-logo">
-            <a href="index.html"><img src="img/logo.png" alt="" /></a>
-          </h2>
-          <p class="address">
-            〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
-          </p>
-        </div>
-  
-        <ul class="menu">
-          <li>
-            <a href="index.html">
-              <span class="en">Top</span>
-              <span class="ja">トップページ</span>
-            </a>
-          </li>
-          <li>
-            <a href="about.html">
-              <span class="en">About</span>
-              <span class="ja">スクール詳細</span>
-            </a>
-          </li>
-          <li>
-            <a href="voice.html">
-              <span class="en">Voice</span>
-              <span class="ja">受講生の声</span>
-            </a>
-          </li>
-          <li>
-            <a href="about.html#price">
-              <span class="en">Price</span>
-              <span class="ja">料金</span>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#faq">
-              <span class="en">FAQ</span>
-              <span class="ja">よくある質問</span>
-            </a>
-          </li>
-          <li>
-            <a href="company.html">
-              <span class="en">Company</span>
-              <span class="ja">会社概要</span>
-            </a>
-          </li>
-        </ul>
-  
-        <ul class="link">
-          <li>
-            <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
-          </li>
-          <li>
-            <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-                src="img/instgram.png" class="ig" />かかし</a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-                src="img/instgram.png" class="ig" />いるか</a>
-          </li>
-          <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
-        </ul>
-      </nav>
-  
-      <nav class="header-menu">
-        <ul class="menu">
-          <li>
-            <a href="about.html">
-              <span class="en">About</span>
-              <span class="ja">スクール詳細</span>
-            </a>
-          </li>
-          <li>
-            <a href="voice.html">
-              <span class="en">Voice</span>
-              <span class="ja">受講生の声</span>
-            </a>
-          </li>
-          <li>
-            <a href="about.html#price">
-              <span class="en">Price</span>
-              <span class="ja">料金</span>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#faq">
-              <span class="en">FAQ</span>
-              <span class="ja">よくある質問</span>
-            </a>
-          </li>
-          <li>
-            <a href="company.html">
-              <span class="en">Company</span>
-              <span class="ja">会社概要</span>
-            </a>
-          </li>
-        </ul>
-  
-        <!-- 固定 -->
-        <div class="fixed">
-  
-          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
-  
-          <div class="hamburger_fixed">
-            <div class="hamburger_toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
+  <header>
+    <h1>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+    </h1>
+
+    <div class="menu-bg"></div>
+    <nav class="hamburger-menu">
+      <div class="company">
+        <h2 class="active-logo">
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
+        </h2>
+        <p class="address">
+          〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
+        </p>
+      </div>
+
+      <div class="right">
+      <ul class="menu">
+        <li>
+          <a href="index.html">
+            <span class="en">Top</span>
+            <span class="ja">トップページ</span>
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <span class="en">About</span>
+            <span class="ja">スクール詳細</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">Voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="about.html#price">
+            <span class="en">Price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#faq">
+            <span class="en">FAQ</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">Company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="link">
+        <li>
+          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
+        </li>
+        <li>
+          <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig" />かかし</a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+              src="img/instgram.png" class="ig" />いるか</a>
+        </li>
+        <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+      </ul>
+      </div>
+    </nav>
+
+    <nav class="header-menu">
+      <ul class="menu">
+        <li>
+          <a href="about.html">
+            <span class="en">About</span>
+            <span class="ja">スクール詳細</span>
+          </a>
+        </li>
+        <li>
+          <a href="voice.html">
+            <span class="en">Voice</span>
+            <span class="ja">受講生の声</span>
+          </a>
+        </li>
+        <li>
+          <a href="about.html#price">
+            <span class="en">Price</span>
+            <span class="ja">料金</span>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#faq">
+            <span class="en">FAQ</span>
+            <span class="ja">よくある質問</span>
+          </a>
+        </li>
+        <li>
+          <a href="company.html">
+            <span class="en">Company</span>
+            <span class="ja">会社概要</span>
+          </a>
+        </li>
+      </ul>
+
+      <!-- 固定 -->
+      <div class="fixed">
+
+        <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+
+        <div class="hamburger_fixed">
+          <div class="hamburger_toggle">
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
-  
         </div>
-        <!--  -->
-      </nav>
-    </header>
+
+      </div>
+      <!--  -->
+    </nav>
+  </header>
 
     <div class="video-bg">   
       <video src="img/leaf_bg_landscape.mp4" autoplay muted loop playsinline></video>
     </div>
 
     <main>
-      <section id="voice-fv" class="wrapper voice-fv">
-        <span class="section-title__en">VOICE</span>
-        <h2 class="section-title flex-left fadein">生徒の声 と コミュニティー</h2>
-      </section>
+    <section id="fv" class="wrapper">
+      <span class="section-title__en">VOICE</span>
+      <h2 class="section-title flex-left fadein2">生徒の声 と コミュニティー</h2>
+    </section>
 
       <section class="voices">
         <div class="wrapper">
@@ -350,36 +352,52 @@
 
       <section class="metaleaf">
         <div class="wrapper">
-          <h3 class="section-title">Metaleaf<span>作業会の紹介</span></h3>
+          <div class="left">
+            <h3 class="section-title">Metaleaf<span>作業会の紹介</span></h3>
+            <p>アバターで参加できるオンラインスペース。<br>同じフェーズの仲間と交流しながら、集中できる作業空間です。<span>※無料で参加できるビジター体験が可能です。</span></p>
+            <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="btn">まずは無料相談</a>
+          </div>
 
           <ul class="list">
-            <li>
-              <img src="img/metaleaf-1.png" alt="" class="fadein" />
+            <li class="fadein">
+              <img src="img/metaleaf-1.png" alt="metaleaf"/>
               <p class="text">
                 フリースペース <span>気軽に話せる仲間が集まれる場所。</span>
               </p>
             </li>
 
-            <li>
-              <img src="img/metaleaf-2.png" alt="" class="fadein" />
+            <li class="fadein">
+              <img src="img/metaleaf-2.png" alt="metaleaf"/>
               <p class="text">
                 毎週月曜のセミナー <span>新しい発見や刺激が見つかる場所。</span>
               </p>
             </li>
 
-            <li>
-              <img src="img/metaleaf-3.png" alt="" class="fadein" />
+            <li class="fadein">
+              <img src="img/metaleaf-3.png" alt="metaleaf"/>
               <p class="text">
                 初心者専用部屋 <span>先輩が優しく声をかけてくれる場所。</span>
               </p>
             </li>
 
-            <li>
-              <img src="img/metaleaf-4.png" alt="" class="fadein" />
+            <li class="fadein">
+              <img src="img/metaleaf-4.png" alt="metaleaf"/>
               <p class="text">
-                モクモクブース <span>静かに集中したい人のための場所。</span>
+                モクモクスペース <span>静かに集中したい人のための場所。</span>
               </p>
             </li>
+
+            <li>
+              <img src="img/metaleaf-5.png" alt="" class="fadein" />
+              <p class="text">
+                チーム作業スペース <span>ハッカソン開催中に、チームで集まって開発作業を進める場所。</span>
+              </p>
+            </li>
+
+            <li>
+              <img src="img/metaleaf.png" alt="" class="fadein" />
+            </li>
+
           </ul>
         </div>
       </section>
