--- a/about.html
+++ b/about.html
@@ -85,6 +85,7 @@
         </p>
       </div>
 
+      <div class="right">
       <ul class="menu">
         <li>
           <a href="index.html">
@@ -143,6 +144,7 @@
         </li>
         <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
       </ul>
+      </div>
     </nav>
 
     <nav class="header-menu">
