チャットボット実装＋companyレスポンシブもれ修正＋headにGTM追加（コメントアウト）

--- a/company.html
+++ b/company.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+  <!-- Google Tag Manager -->
+  <!-- <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MLFWZH7D');</script> -->
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -92,64 +102,64 @@
       </div>
 
       <div class="right">
-      <ul class="menu">
-        <li>
-          <a href="index.html">
-            <span class="en">Top</span>
-            <span class="ja">トップページ</span>
-          </a>
-        </li>
-        <li>
-          <a href="about.html">
-            <span class="en">About</span>
-            <span class="ja">スクール詳細</span>
-          </a>
-        </li>
-        <li>
-          <a href="voice.html">
-            <span class="en">Voice</span>
-            <span class="ja">受講生の声</span>
-          </a>
-        </li>
-        <li>
-          <a href="about.html#price">
-            <span class="en">Price</span>
-            <span class="ja">料金</span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#faq">
-            <span class="en">FAQ</span>
-            <span class="ja">よくある質問</span>
-          </a>
-        </li>
-        <li>
-          <a href="company.html">
-            <span class="en">Company</span>
-            <span class="ja">会社概要</span>
-          </a>
-        </li>
-      </ul>
+        <ul class="menu">
+          <li>
+            <a href="index.html">
+              <span class="en">Top</span>
+              <span class="ja">トップページ</span>
+            </a>
+          </li>
+          <li>
+            <a href="about.html">
+              <span class="en">About</span>
+              <span class="ja">スクール詳細</span>
+            </a>
+          </li>
+          <li>
+            <a href="voice.html">
+              <span class="en">Voice</span>
+              <span class="ja">受講生の声</span>
+            </a>
+          </li>
+          <li>
+            <a href="about.html#price">
+              <span class="en">Price</span>
+              <span class="ja">料金</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#faq">
+              <span class="en">FAQ</span>
+              <span class="ja">よくある質問</span>
+            </a>
+          </li>
+          <li>
+            <a href="company.html">
+              <span class="en">Company</span>
+              <span class="ja">会社概要</span>
+            </a>
+          </li>
+        </ul>
 
-      <ul class="link">
-        <li>
-          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
-        </li>
-        <li>
-          <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig" />かかし</a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig" />いるか</a>
-        </li>
-        <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
-      </ul>
+        <ul class="link">
+          <li>
+            <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
+          </li>
+          <li>
+            <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+                src="img/instgram.png" class="ig" />かかし</a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+                src="img/instgram.png" class="ig" />いるか</a>
+          </li>
+          <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+        </ul>
       </div>
     </nav>
 
@@ -204,7 +214,7 @@
       <!--  -->
     </nav>
   </header>
-  
+
   <div class="video-bg">
     <video src="img/leaf_bg_landscape.mp4" autoplay muted loop playsinline></video>
   </div>
@@ -277,7 +287,9 @@
             <div class="text">
               <span>iruka.freelance</span>
               <p class="text">いるか｜ワンランク上の仕事と日常</p>
-              <a href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る >>></a>
+              <a
+                href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る
+                >>></a>
             </div>
           </li>
           <li>
@@ -287,7 +299,9 @@
             <div class="text">
               <span>kakashi.programming.lab</span>
               <p class="text">かかし｜プログラミング×教育️</p>
-              <a href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る >>></a>
+              <a
+                href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る
+                >>></a>
             </div>
           </li>
         </ul>
@@ -392,16 +406,52 @@
           <span class="to-top-text">PAGE TOP</span>
         </button>
       </a>
-
-      <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="chatbot-icon" />
-      </a>
     </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="main.js"></script>
+  <script type="module">
+    import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0/dist/web.js'
+
+    Typebot.initBubble({
+      typebot: "customer-support-sxcmv66",
+      theme: {
+        button: {
+          backgroundColor: "#db8405",
+          iconColor: "#ffffff",
+          size: "64px",
+        },
+        chatWindow: {
+          backgroundColor: "#F8F8F8",
+          maxWidth: "420px",
+          maxHeight: "70vh",
+        },
+        placement: "right",
+      },
+    });
+
+
+    // ===== スクロールで自動オープン =====
+    let hasOpenedOnScroll = false;
+
+    window.addEventListener("scroll", () => {
+      if (hasOpenedOnScroll) return;
+
+      const footer = document.querySelector("footer"); // ← ここを好きなセクションに変えてOK
+      if (!footer) return;
+
+      const rect = footer.getBoundingClientRect();
+      const vh = window.innerHeight || document.documentElement.clientHeight;
+
+      // footerの上端が 画面下から ちょっと上 に入ってきたら発火
+      if (rect.top < vh - 100) {
+        Typebot.open();
+        hasOpenedOnScroll = true; // 1回だけ
+      }
+    });
+  </script>
 </body>
 
 </html>
