--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+  <!-- Google Tag Manager -->
+  <!-- <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MLFWZH7D');</script> -->
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -86,64 +96,64 @@
       </div>
 
       <div class="right">
-      <ul class="menu">
-        <li>
-          <a href="index.html">
-            <span class="en">Top</span>
-            <span class="ja">トップページ</span>
-          </a>
-        </li>
-        <li>
-          <a href="about.html">
-            <span class="en">About</span>
-            <span class="ja">スクール詳細</span>
-          </a>
-        </li>
-        <li>
-          <a href="voice.html">
-            <span class="en">Voice</span>
-            <span class="ja">受講生の声</span>
-          </a>
-        </li>
-        <li>
-          <a href="about.html#price">
-            <span class="en">Price</span>
-            <span class="ja">料金</span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#faq">
-            <span class="en">FAQ</span>
-            <span class="ja">よくある質問</span>
-          </a>
-        </li>
-        <li>
-          <a href="company.html">
-            <span class="en">Company</span>
-            <span class="ja">会社概要</span>
-          </a>
-        </li>
-      </ul>
+        <ul class="menu">
+          <li>
+            <a href="index.html">
+              <span class="en">Top</span>
+              <span class="ja">トップページ</span>
+            </a>
+          </li>
+          <li>
+            <a href="about.html">
+              <span class="en">About</span>
+              <span class="ja">スクール詳細</span>
+            </a>
+          </li>
+          <li>
+            <a href="voice.html">
+              <span class="en">Voice</span>
+              <span class="ja">受講生の声</span>
+            </a>
+          </li>
+          <li>
+            <a href="about.html#price">
+              <span class="en">Price</span>
+              <span class="ja">料金</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#faq">
+              <span class="en">FAQ</span>
+              <span class="ja">よくある質問</span>
+            </a>
+          </li>
+          <li>
+            <a href="company.html">
+              <span class="en">Company</span>
+              <span class="ja">会社概要</span>
+            </a>
+          </li>
+        </ul>
 
-      <ul class="link">
-        <li>
-          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
-        </li>
-        <li>
-          <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig" />かかし</a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig" />いるか</a>
-        </li>
-        <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
-      </ul>
+        <ul class="link">
+          <li>
+            <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
+          </li>
+          <li>
+            <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+                src="img/instgram.png" class="ig" />かかし</a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
+                src="img/instgram.png" class="ig" />いるか</a>
+          </li>
+          <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
+        </ul>
       </div>
     </nav>
 
@@ -349,72 +359,75 @@
     <section id="works" class="flip-slider wrapper">
       <h3 class="section-title fadein">生徒の制作実績</h3><span class="section-title-deco">works</span>
       <div class="flip-slider__inner js-flip-slider">
-        <a
-        href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/" target="_blank" >
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/1-front.png" alt="works1-front" />
+        <a href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/"
+          target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/1-front.png" alt="works1-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/1-back.png" alt="works1-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/1-back.png" alt="works1-back" />
-          </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://pronavi-board.noe-p.com/quiet/ " target="_blank">
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/2-front.png" alt="works2-front" />
+        <a href="https://pronavi-board.noe-p.com/quiet/ " target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/2-front.png" alt="works2-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/2-back.png" alt="works2-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/2-back.png" alt="works2-back" />
-          </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://pronavi-board.noe-p.com/trattoria-verde/" target="_blank">
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/3-front.png" alt="works3-front" />
+        <a href="https://pronavi-board.noe-p.com/trattoria-verde/" target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/3-front.png" alt="works3-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/3-back.png" alt="works3-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/3-back.png" alt="works3-back" />
-          </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/4-front.png" alt="works4-front" />
+        <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/"
+          target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/4-front.png" alt="works4-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/4-back.png" alt="works4-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/4-back.png" alt="works4-back" />
-          </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/5-front.png" alt="works5-front" />
+        <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/"
+          target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/5-front.png" alt="works5-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/5-back.png" alt="works5-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/5-back.png" alt="works5-back" />
-          </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/" target="_blank">
-        <div class="slider-inner">
-          <div class="front">
-            <img src="img/works/6-front.png" alt="works6-front" />
+        <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/"
+          target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/6-front.png" alt="works6-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/6-back.png" alt="works6-back" />
+            </div>
           </div>
-          <div class="back">
-            <img src="img/works/6-back.png" alt="works6-back" />
-          </div>
-        </div>
-      </a>
+        </a>
       </div>
       <div class="viewmore">
         <a href="https://pronavi-board.noe-p.com/">View More ></a>
@@ -462,15 +475,51 @@
           <span class="to-top-text">PAGE TOP</span>
         </button>
       </a>
-
-      <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="chatbot-icon" />
-      </a>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="main.js"></script>
+  <script type="module">
+    import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0/dist/web.js'
+
+    Typebot.initBubble({
+      typebot: "customer-support-sxcmv66",
+      theme: {
+        button: {
+          backgroundColor: "#db8405",
+          iconColor: "#ffffff",
+          size: "64px",
+        },
+        chatWindow: {
+          backgroundColor: "#F8F8F8",
+          maxWidth: "420px",
+          maxHeight: "70vh",
+        },
+        placement: "right",
+      },
+    });
+
+
+    // ===== スクロールで自動オープン =====
+    let hasOpenedOnScroll = false;
+
+    window.addEventListener("scroll", () => {
+      if (hasOpenedOnScroll) return;
+
+      const footer = document.querySelector("footer"); // ← ここを好きなセクションに変えてOK
+      if (!footer) return;
+
+      const rect = footer.getBoundingClientRect();
+      const vh = window.innerHeight || document.documentElement.clientHeight;
+
+      // footerの上端が 画面下から ちょっと上 に入ってきたら発火
+      if (rect.top < vh - 100) {
+        Typebot.open();
+        hasOpenedOnScroll = true; // 1回だけ
+      }
+    });
+  </script>
 </body>
 
 </html>
