ミーティングでの修正箇所

--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>
-    ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ
+    ProNavi｜未経験から案件獲得まで導く伴走型プログラミング学習
   </title>
-  <meta name="description" content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。" />
+  <meta name="description" content="学習だけで終わらせず、実装・ポートフォリオ制作・案件獲得まで伴走。現役エンジニアの継続サポートで、確実にスキルが身につく学習環境です。" />
 
   <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
