--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="inner">
           <ul class="purpose-list">
             <li>
-              <a href="#">
+              <a href="#comparison">
                 <img src="img/purpose-1.png" alt="purpose" />
                 <h3 class="box-title">
                   他社との比較<span class="en">Comparison</span>
@@ -266,7 +266,7 @@
               </a>
             </li>
             <li>
-              <a href="voice.html">
+              <a href="about.html#about">
                 <img src="img/purpose-3.png" alt="purpose" />
                 <h3 class="box-title">
                   案件獲得できる？<span class="en">Lead</span>
@@ -275,7 +275,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="voice.html">
                 <img src="img/purpose-4.png" alt="purpose" />
                 <h3 class="box-title">
                   未経験でも大丈夫？<span class="en">Unexperienced</span>
