--- a/company.html
+++ b/company.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>ProNavi｜会社概要</title>
-  <meta name="description" content="株式会社NOEの会社概要・メンバー紹介。教育×実装支援で、学習から案件獲得までの橋渡しを担うコミュニティ運営を行っています。">
+  <meta name="description" content="プログラミング学習から実装・案件獲得まで、現役エンジニアが伴走支援するコミュニティ。株式会社NOEの会社概要・メンバー紹介はこちら。">
 
   <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
@@ -240,7 +240,7 @@
         <ul>
           <li class="items">
             <img src="img/member_pic_kato.png" class="pic" alt="member_pic">
-            <span class="position">代表</span>
+            <span class="position">講師</span>
             <p class="name">加藤 夕騎</p>
             <p class="words">お客様一人ひとりの目的や課題にあった組み合わせをカリキュラムとして提供します。</p>
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco">
