--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Google Tag Manager -->
+  <!-- 分析データが混在しないようにハッカソン段階ではコメントアウト -->
   <!-- <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
             'gtm.start':
@@ -16,15 +17,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>
-    ProNavi｜仲間と一緒に成長できる“伴走型”プログラミング学習コミュニティ
+    ProNavi｜仲間と一緒に成長できるコーチング型プログラミング学習
   </title>
-  <meta name="description" content="学習だけで終わらせない、実装と案件獲得まで伴走する学習環境。現役エンジニアが継続サポートし、確実に成果につながるスキル定着を支援します。" />
+  <meta name="description" content="学ぶだけで終わらせない。コーチング型×コミュニティで実装と案件獲得まで伴走。現役エンジニアの継続サポートで確実にスキル定着へ。" />
 
   <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta property="og:title" content="ProNavi｜仲間と一緒に成長できるコーチング型プログラミング学習" />
+  <meta property="og:description" content="実装・ポートフォリオ制作・案件獲得まで、コーチング型×コミュニティで現役エンジニアが継続伴走。" />
   <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/" />
   <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
@@ -33,8 +34,8 @@
 
   <!-- X(Twitter)カード -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta name="twitter:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta name="twitter:title" content="ProNavi｜仲間と一緒に成長できるコーチング型プログラミング学習" />
+  <meta name="twitter:description" content="実装・ポートフォリオ制作・案件獲得まで、コーチング型×コミュニティで現役エンジニアが継続伴走。" />
   <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
   <!-- Canonical URL -->
@@ -52,7 +53,7 @@
         "@type": "Organization",
         "name": "株式会社NOE",
         "url": "https://pronavi.navigator-of-engineering.com/",
-        "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
+        "description": "実装・制作・案件獲得まで継続伴走するコーチング型プログラミング学習を展開。",
         "email": "noe.co.0126@gmail.com",
         "address": {
           "@type": "PostalAddress",
@@ -924,7 +925,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
-            <li><a href="#">会社概要</a></li>
+            <li><a href="company.html">会社概要</a></li>
           </ul>
         </nav>
       </div>
