--- a/voice.html
+++ b/voice.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Google Tag Manager -->
+  <!-- 分析データが混在しないようにハッカソン段階ではコメントアウト -->
   <!-- <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
             'gtm.start':
@@ -15,14 +16,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>ProNavi｜受講生の声</title>
-  <meta name="description" content="ProNavi受講生のリアルな体験談。学習〜実装、ポートフォリオ制作、案件獲得まで伴走されながら、どのようにスキルが伸びたのかをご紹介します。" />
+  <title>ProNavi｜受講生の声とコミュニティー紹介</title>
+  <meta name="description" content="ProNavi受講生のリアルな体験談。学習から実装・ポートフォリオ制作・案件獲得まで、コミュニティと伴走サポートでスキルが伸びたプロセスをご紹介します。" />
 
   <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="ProNavi｜受講生の声" />
-  <meta property="og:description" content="受講生の実体験から、伴走型でスキル定着・案件獲得につながったプロセスを紹介。" />
+  <meta property="og:title" content="ProNavi｜受講生の声とコミュニティー紹介" />
+  <meta property="og:description" content="受講生の声から、仲間と支え合いながら成長できる伴走型コミュニティの魅力をご紹介。" />
   <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/voice.html" />
   <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
@@ -31,8 +32,8 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ProNavi｜受講生の声" />
-  <meta name="twitter:description" content="受講生の実体験から、伴走型でスキル定着・案件獲得につながったプロセスを紹介。" />
+  <meta name="twitter:title" content="ProNavi｜受講生の声とコミュニティー紹介" />
+  <meta name="twitter:description" content="受講生の声から、仲間と支え合いながら成長できる伴走型コミュニティの魅力をご紹介。" />
   <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
   <!-- Canonical -->
@@ -47,9 +48,9 @@
       {
         "@context": "https://schema.org",
         "@type": "CollectionPage",
-        "name": "ProNavi｜受講生の声",
+        "name": "ProNavi｜受講生の声とコミュニティー紹介",
         "url": "https://pronavi.navigator-of-engineering.com/voice.html",
-        "description": "ProNavi受講生のリアルな体験談。学習〜実装、案件獲得までのプロセスを紹介。"
+        "description": "受講生の声から、仲間と支え合いながら成長できる伴走型コミュニティの魅力をご紹介。"
       }
     </script>
 
@@ -68,7 +69,7 @@
           {
             "@type": "ListItem",
             "position": 2,
-            "name": "受講生の声",
+            "name": "受講生の声とコミュニティー",
             "item": "https://pronavi.navigator-of-engineering.com/voice.html"
           }
         ]
@@ -521,7 +522,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
-            <li><a href="#">会社概要</a></li>
+            <li><a href="company.html">会社概要</a></li>
           </ul>
         </nav>
       </div>
