--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Google Tag Manager -->
+  <!-- 分析データが混在しないようにハッカソン段階ではコメントアウト -->
   <!-- <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
             'gtm.start':
@@ -23,8 +24,8 @@
   <!-- OGP -->
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta property="og:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta property="og:title" content="ProNavi｜未経験から案件獲得まで導く伴走型プログラミング学習" />
+  <meta property="og:description" content="一人で悩ませない。実装・制作・案件獲得まで、現役エンジニアのマンツーマン指導で着実に成長。" />
   <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/" />
   <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
@@ -33,8 +34,8 @@
 
   <!-- X(Twitter)カード -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ProNavi｜仲間と実践で伸びる“伴走型”プログラミング学習コミュニティ" />
-  <meta name="twitter:description" content="教材で終わらせない。実装・ポートフォリオ制作・案件獲得まで、現役エンジニアが継続伴走。" />
+  <meta name="twitter:title" content="ProNavi｜未経験から案件獲得まで導く伴走型プログラミング学習" />
+  <meta name="twitter:description" content="一人で悩ませない。実装・制作・案件獲得まで、現役エンジニアのマンツーマン指導で着実に成長。。" />
   <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
   <!-- Canonical URL -->
@@ -52,7 +53,7 @@
         "@type": "Organization",
         "name": "株式会社NOE",
         "url": "https://pronavi.navigator-of-engineering.com/",
-        "description": "仲間と共に学び、実装と案件獲得まで伴走するプログラミング学習コミュニティ。",
+        "description": "実装・制作・案件獲得まで継続伴走するコーチング型プログラミング学習を展開。",
         "email": "noe.co.0126@gmail.com",
         "address": {
           "@type": "PostalAddress",
@@ -463,7 +464,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
-            <li><a href="#">会社概要</a></li>
+            <li><a href="company.html">会社概要</a></li>
           </ul>
         </nav>
       </div>
