--- a/company.html
+++ b/company.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Google Tag Manager -->
+  <!-- 分析データが混在しないようにハッカソン段階ではコメントアウト -->
   <!-- <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
             'gtm.start':
@@ -22,7 +23,7 @@
   <meta property="og:site_name" content="ProNavi（プロナビ）" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="ProNavi｜会社概要" />
-  <meta property="og:description" content="株式会社NOEの会社情報・メンバー紹介。" />
+  <meta property="og:description" content="株式会社NOEの会社情報・メンバー紹介" />
   <meta property="og:url" content="https://pronavi.navigator-of-engineering.com/company.html" />
   <meta property="og:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
@@ -32,7 +33,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="ProNavi｜会社概要" />
-  <meta name="twitter:description" content="株式会社NOEの会社情報・メンバー紹介。" />
+  <meta name="twitter:description" content="株式会社NOEの会社情報・メンバー紹介" />
   <meta name="twitter:image" content="https://pronavi.navigator-of-engineering.com/img/ogp.png" />
 
   <!-- Canonical -->
@@ -250,7 +251,7 @@
         <ul>
           <li class="items">
             <img src="img/member_pic_kato.png" class="pic" alt="member_pic">
-            <span class="position">講師</span>
+            <span class="position">講師統括</span>
             <p class="name">加藤 夕騎</p>
             <p class="words">お客様一人ひとりの目的や課題にあった組み合わせをカリキュラムとして提供します。</p>
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco">
@@ -394,7 +395,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
-            <li><a href="#">会社概要</a></li>
+            <li><a href="company.html">会社概要</a></li>
           </ul>
         </nav>
       </div>
