スライダー修正＋FV動画サイズ調整

--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
     <div class="fv">
       <div class="pc-only">
         <video autoplay muted loop playsinline class="pc-only">
-          <source src="img/Hackathon-FV03-PC.mp4" type="video/mp4" />
+          <source src="img/Hackathon-FV03-PC_ver2.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="tb-only">
         <video autoplay muted loop playsinline class="tb-only">
-          <source src="img/Hackathon-FV03-SP.mp4" type="video/mp4" />
+          <source src="img/Hackathon-FV03-SP_ver2.mp4" type="video/mp4" />
         </video>
       </div>
       <p class="titles">
